Done upload image and audio (contain validation) in SongController

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,3 +5,10 @@
 #songModal{
     overflow-y:scroll;
 }
+#validationError{
+	display: none;
+}
+#imgContent{
+	display: block;
+	margin-top: 10px;
+}
