--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -34,7 +34,6 @@
     width: 0px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
 }
-/* optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-    background: #FF0000;
+#side-menu{
+	margin-top: 60px;
 }
